--- a/app/assets/stylesheets/components/_mapbox_info_window.scss
+++ b/app/assets/stylesheets/components/_mapbox_info_window.scss
@@ -4,7 +4,7 @@
   color: black;
 }
 
-.mapboxgl-popup-content h1 {
+#info-window-header {
   font-size: 20px !important;
   font-weight: bold;
   font-family: Georgia, 'Times New Roman', Times, serif !important;
