--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,6 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "menu_button";
+@import "menu";
 @import "navbar";
