--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,9 +1,7 @@
-<div data-controller="menu-slider">
+<div id="javadiv-menu" data-controller="menu-slider">
   <div id="menu" data-menu-slider-target="menu">
     <div class="content" data-menu-slider-target="menuText">
-      <h2>Profile</h2>
-      <h4>my Reviews</h4>
-      <h4>Log out</h4>
+      <h2>MENU</h2>
     </div>
   </div>
 
