--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -10,6 +10,7 @@
   padding: 40px;
   transition: all 0.4s ease-in-out;
   white-space: nowrap;
+  // z-index: 10;
 }
 
 #menu.show-menu {
@@ -32,3 +33,7 @@
   left: 400px
   // transition: 0.5s;
 }
+
+// #javadiv-menu {
+//   z-index: 20;
+// }
