--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,4 +5,5 @@
 @import "menu";
 @import "navbar";
 @import "mapbox_info_window";
-@import "map_search_bar"
+@import "map_search_bar";
+@import "book_now_button"
