--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,8 +1,9 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "dashboard_tab";
 @import "menu_button";
 @import "menu";
 @import "navbar";
 @import "mapbox_info_window";
-@import "map_search_bar"
+@import "map_search_bar";
