--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -10,7 +10,7 @@
   padding: 40px;
   transition: all 0.4s ease-in-out;
   white-space: nowrap;
-  // z-index: 10;
+  z-index: 2;
 }
 
 #menu.show-menu {
