--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,3 +12,6 @@ $red: red;
 $default-red: #F43B36;
 $dark-red: #C32E2B;
 $light-red: #F8807E;
+
+$light-grey: rgb(233, 233, 233);
+$grey: rgb(201, 201, 201);
