--- a/app/assets/stylesheets/components/_menu_button.scss
+++ b/app/assets/stylesheets/components/_menu_button.scss
@@ -5,19 +5,20 @@
   // cursor: pointer;
   // border: 3px solid black;
   position: fixed;
-  top: 81%;
-  left: 73%;
+  top: calc(100% - 100px);
+  left: calc(100% - 100px);
   border-radius: 45px;
   background-color: $default-red;
   padding: 10px 14px;
   transition: 0.4s;
   box-shadow: 3px 3px 3px grey;
+  z-index: 2;
 }
 
 .container.change-button {
   transition: 0.4s;
   background-color: white;
-  // box-shadow: inset 3px 3px 3px grey;
+  box-shadow: none;
 }
 
 .bar1, .bar2, .bar3 {
@@ -27,6 +28,7 @@
   margin: 4px 0;
   transition: 0.6s;
   border-radius: 4px;
+  z-index: 2;
 }
 
 .change-bars .bar1 {
