--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,38 @@
 
   <body>
     <%= render 'shared/menu' %>
-    <%= yield %>
+    <div id="notmenu">
+      <%= yield %>
+    </div>
 
+
+
+
+    <script>
+      function tabOne() {
+        document.querySelector('#tab-1').classList.add("select");
+        document.querySelector('#tab-2').classList.remove("select");
+        document.querySelector('#tab-3').classList.remove("select");
+        document.querySelector('#tab-1-content').classList.add("select");
+        document.querySelector('#tab-2-content').classList.remove("select");
+        document.querySelector('#tab-3-content').classList.remove("select");
+      }
+      function tabTwo() {
+        document.querySelector('#tab-1').classList.remove("select");
+        document.querySelector('#tab-2').classList.add("select");
+        document.querySelector('#tab-3').classList.remove("select");
+        document.querySelector('#tab-1-content').classList.remove("select");
+        document.querySelector('#tab-2-content').classList.add("select");
+        document.querySelector('#tab-3-content').classList.remove("select");
+      }
+      function tabThree() {
+        document.querySelector('#tab-1').classList.remove("select");
+        document.querySelector('#tab-2').classList.remove("select");
+        document.querySelector('#tab-3').classList.add("select");
+        document.querySelector('#tab-1-content').classList.remove("select");
+        document.querySelector('#tab-2-content').classList.remove("select");
+        document.querySelector('#tab-3-content').classList.add("select");
+      }
+    </script>
   </body>
 </html>
