--- a/app/assets/stylesheets/components/_dashboard_tab.scss
+++ b/app/assets/stylesheets/components/_dashboard_tab.scss
@@ -36,7 +36,7 @@
   color: rgb(94, 94, 94);
   background-color: white;
   transition: 0.3s;
-  // box-shadow: inset 3px 3px 0px rgb(172, 172, 172);
+  box-shadow: inset 3px 3px 0px rgb(172, 172, 172);
   h4 {
     color: grey;
   }
@@ -56,7 +56,7 @@
   background-color: white;
   border-radius: 8px;
   color: grey;
-  // box-shadow: inset 4px 4px 0px rgb(172, 172, 172);
+  box-shadow: inset 4px 4px 0px rgb(172, 172, 172);
   transition: 0.3s;
 }
 
