done with dashboard so far

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,9 +1,13 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "booking_tab";
 @import "dashboard_tab";
+@import "home_tab";
+@import "map_search_bar";
+@import "mapbox_info_window";
 @import "menu_button";
 @import "menu";
 @import "navbar";
-@import "mapbox_info_window";
-@import "map_search_bar";
+@import "profile_card";
+@import "review_tab";
