--- a/app/assets/stylesheets/components/_dashboard_tab.scss
+++ b/app/assets/stylesheets/components/_dashboard_tab.scss
@@ -1,7 +1,6 @@
-// THE TABS TO SELECT
+// THE TAB BUTTONS
 
-// div theyre inside
-
+// the div theyre inside
 #tab-headers {
   display: flex;
   height: 66px;
@@ -10,7 +9,6 @@
 }
 
 // their style
-
 #tab-headers div {
   display: flex;
   justify-content: center;
@@ -18,11 +16,12 @@
   padding: 0px 4px;
   border-radius: 8px;
   margin: 0 2px;
-  background-color: rgb(201, 201, 201);
+  background-color: white;
   color: rgb(255, 254, 254);
   width: 33.333%;
   transition: 0.3s;
-  box-shadow: none;
+  // box-shadow: 2px 2px 0px rgb(172, 172, 172);
+
   h4 {
     font-size: 15px;
     line-height: 20px;
@@ -30,13 +29,12 @@
   }
 }
 
-// tabs headers when clicked
-
+//  their style when clicked
 #tab-1.select, #tab-2.select, #tab-3.select {
   color: rgb(94, 94, 94);
-  background-color: white;
+  background-color: rgb(201, 201, 201);
   transition: 0.3s;
-  box-shadow: inset 3px 3px 0px rgb(172, 172, 172);
+  box-shadow: 0px 0px 0px, inset 3px 3px 0px rgb(172, 172, 172);
   h4 {
     color: grey;
   }
@@ -44,27 +42,75 @@
 
 
 // THE TAB PAGES
-
 #tab-1-content, #tab-2-content, #tab-3-content {
   // display: none;
   opacity: 0;
   position: absolute;
   height: auto;
   width: calc(100% - 60px);
-  padding: 30px;
-  margin: 30px;
-  background-color: white;
-  border-radius: 8px;
-  color: grey;
-  box-shadow: inset 4px 4px 0px rgb(172, 172, 172);
+  background-color: rgb(228, 228, 228);
+  // background-color: red;
+  // box-shadow: inset 4px 4px 0px rgb(172, 172, 172);
   transition: 0.3s;
+  margin: 30px;
+  h2 {
+    font-size: 21px;
+  }
+  h3 {
+    font-size: 15px;
+  }
+  p {
+    font-size: 12px;
+    margin-top: 6px;
+    margin-bottom: 0px;
+  }
+  button {
+    text-decoration: none;
+  }
+}
+
+// default buttons for all tabs
+.tab-button {
+  color: white;
+  border-radius: 14px;
+  background-color: $default-red;
+  padding: 6px;
+  display: inline-block;
+}
+
+// for the card design
+.tab-card {
+  border-radius: 8px;
+  padding: 30px;
+  margin-bottom: 30px;
+  background-color: white;
+  color: rgb(114, 114, 114);
+  ul {
+    margin: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding: 0;
+    list-style: none;
+    li {
+      margin: 0;
+      padding: 0;
+      height: 10px;
+      // border: 2px solid red;
+      line-height: 0px;
+    }
+  }
+}
+
+// to have some elements next to each other
+.flexbox {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 
 // tab-pages display animation
-
 #tab-1-content.select, #tab-2-content.select, #tab-3-content.select {
   // display: block;
   opacity: 1;
   transition: 0.3;
-  background-color: white;
 }
