--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,3 +1,30 @@
+<div id="profile_card">
+    <div id="avatar_name">
+      <div>
+        <h2>
+          <%= @user.first_name %>
+            <% if @user.gender == "female"%>
+              <i class="fas fa-venus"></i>
+            <% else %>
+              <i class="fas fa-mars"></i>
+            <% end %>
+          <br>
+          <%= @user.last_name %>
+        </h2>
+      </div>
+      <i class="fas fa-user-circle fa-4x"></i>
+      <%# <img id="profile-picture"src="https://www.pinclipart.com/picdir/middle/148-1486972_mystery-man-avatar-circle-clipart.png" alt=""> %>
+    </div>
+    <div class="flexbox">
+      <div>
+        <p><i class="fas fa-envelope"></i> <%= @user.email %></p>
+        <p><i class="fas fa-phone"></i> +49 01575 8877956</p>
+      </div>
+      <i class="fas fa-cog tab-button"></i>
+    </div>
+  </div>
+
+
 <div id="tab-headers">
   <div id="tab-1" onclick="tabOne()" class="select">
     <h4>HOME</h4>
@@ -15,32 +42,17 @@
 
 <%# home tab HTML%>
 
-<div id="tab-1-content" class="home-dashboard select">
-  <div class="profile">
-    <div id="profile-picture-name-gender">
-      <i class="fas fa-user-circle"></i>
-        <div>
-          <h2><%= @user.first_name %> <%= @user.last_name %></h2>
-          <h3><%= @user.gender %></h3>
-        </div>
-    </div>
-    <div>
-      <p><i class="fas fa-envelope"></i> <%= @user.email %></p>
-      <p><i class="fas fa-phone"></i> +49 01575 8877956</p>
-    </div>
-    <button>Edit <i class="fas fa-edit"></i></button>
-  </div>
-  <div class="current-alert">
-    <h3>My booking</h3>
-    <p>
+
+
+<div id="tab-1-content" class="select">
+  <div class="tab-card">
+    <h2>Latest booking</h2>
     <ul>
-      <li><%= @current.id %></li>
-      <li><%= @current.date_time %></li>
-      <li><%= @current.duration %></li>
-      <li><%= @current.plug.location%></li>
+      <p><%= @current.date_time.strftime('%A, %d %b') %></p>
+      <p><%= @current.date_time.strftime('%l:%M %p') %> - <%=  (@current.date_time + @current.duration.minutes).strftime('%l:%M %p') %></p>
+      <p><%= @current.plug.location%></p>
     </ul>
-      <button>Write Review <i class="far fa-keyboard"></i></button>
-    </p>
+      <h3 class="tab-button">Write Review <i class="far fa-keyboard"></i></h3>
   </div>
 </div>
 
@@ -48,55 +60,58 @@
 <%# Reviewstab HTML %>
 
 <div id="tab-2-content">
-  HOME
+  <div class="tab-card">
+    <h3>Written Reviews <i class="fas fa-paper-plane"></i></h3>
+      <% @user.reviews.each do |review| %>
+        <ul>
+          <p><%= review.contents %></p>
+          <p><%= review.booking.date_time.strftime('%A, %d %b') %></p>
+        </ul>
+      <% end %>
+  </div>
+  <div class="tab-card">
+    <h3>Received Reviews <i class="fas fa-mail-bulk"></i></h3>
+    <% @user.reviews_as_owner.each do |review| %>
+        <ul>
+          <% num = review.rating.to_i %>
+            <% num.times do %>
+              <i class="fas fa-star"></i>
+            <% end %>
+            <% (5-num).times do %>
+              <i class="far fa-star"></i>
+            <% end %>
+          <p><%= review.contents %></p>
+          <p><%= review.booking.date_time.strftime('%A, %d %b') %></p>
+        </ul>
+    <% end %>
+  </div>
 </div>
+
 
 <%# Bookings-tab HTML %>
 
 
-<div id="tab-3-content" class="booking-dashboard">
-  <div id="booking-history">
-    <h3>Booking History</h3>
-    <i class="fas fa-book"></i>
-  </div>
-  <div id="bookings-history">
+<div id="tab-3-content">
+  <div class="tab-card">
+    <h3>Booking History <i class="fas fa-book"></i></h3>
     <% @bookings.each do |booking| %>
       <ul>
-        <li><%= booking.id %></li>
-        <li><%= booking.date_time %></li>
-        <li><%= booking.duration %></li>
-        <li><%= booking.plug.location%></li>
+        <p><%= booking.date_time.strftime('%A, %d %b') %></p>
+        <p><%= booking.date_time.strftime('%l:%M %p') %> - <%=  (booking.date_time + booking.duration.minutes).strftime('%l:%M %p') %></p>
+        <p><%= booking.plug.location%></p>
       </ul>
     <% end %>
   </div>
-  <div id="plug-booking-history">
-    <h3>Plug Booking History</h3>
-    <i class="fas fa-charging-station"></i>
-  </div>
-  <div>
+  <div class="tab-card">
+    <h3>Plug Booking History <i class="fas fa-charging-station"></i></h3>
     <% @user.plugs.each do |plug| %>
       <% plug.bookings.each do |booking| %>
         <ul>
-          <li><%= booking.user.first_name %> <%= booking.user.last_name %></li>
-          <li><%= booking.date_time %></li>
-          <li><%= booking.duration %></li>
+          <p><%= booking.user.first_name %> <%= booking.user.last_name %></p>
+          <p><%= booking.date_time.strftime('%A, %d %b') %></p>
+          <p><%= booking.date_time.strftime('%l:%M %p') %> - <%=  (booking.date_time + booking.duration.minutes).strftime('%l:%M %p') %></p>
         </ul>
       <% end %>
     <% end %>
-    <br>
-<br>
-<br>
-<br><br>
-<br>
-<br>
-<br><br>
-<br>
-<br>
-<br>
   </div>
 </div>
-
-<br>
-<br>
-<br>
-<br>
