--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -1,4 +1,7 @@
 #menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   opacity: 0;
   width: 3px;
   left: 99%;
@@ -11,28 +14,82 @@
   transition: all 0.4s ease-in-out;
   white-space: nowrap;
   z-index: 2;
+  h2 {
+    font-family: 'Rajdhani', sans-serif;
+    font-size: 40px;
+    font-weight: 600;
+  }
+  a {
+    color: white;
+    font-size: 21px;
+    line-height: 65px;
+  }
 }
 
 #menu.show-menu {
   opacity: 1;
-  width: 65%;
-  left: 35%;
+  width: 70%;
+  left: 30%;
   transition: all 0.4s ease-in-out;
 }
 
-
-#menu-content {
-  color: black;
-  position: fixed;
-  top: 42px;
-  left: 174px;
-  transition: 0.4s;
+.content-separator {
+  margin: 20px 0px;
+  height: 4px;
+  width: 400px;
+  background-color: white;
 }
 
-#menu-content.move {
-  left: 400px
-  // transition: 0.5s;
+.content {
+  display: block;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-between;
+  // height: 100%;
 }
+
+
+.footer-links {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 40%;
+}
+.footer-links a {
+  color: white;
+  text-decoration: none;
+  font-size: 30px  !important;
+  padding-right: 22px;
+}
+.footer-links a:hover {
+  color: rgb(114, 114, 114);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// #menu-content {
+//   color: black;
+//   position: fixed;
+//   top: 42px;
+//   left: 174px;
+//   transition: 0.4s;
+// }
+
+// #menu-content.move {
+//   left: 400px
+//   // transition: 0.5s;
+// }
 
 // #javadiv-menu {
 //   z-index: 20;
