moved dashboard page to users/edit page and iplemented a edit user function, also the link in the menu goes there now, obviously

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "booking_tab";
 @import "dashboard_tab";
 @import "home_tab";
+@import "input_field";
 @import "map_search_bar";
 @import "mapbox_info_window";
 @import "menu_button";
