--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,11 @@
         document.querySelector('#tab-2-content').classList.remove("select");
         document.querySelector('#tab-3-content').classList.add("select");
       }
+      function editProfile() {
+        document.querySelector('#profile-edit-button').classList.toggle("select");
+        document.querySelector('#edit-profile-field').classList.toggle("d-none");
+        // document.querySelector('#edit-profile-field').classList.toggle("hide");
+      }
     </script>
   </body>
 </html>
