--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -6,7 +6,7 @@
         <div class="content-separator"></div>
         <%= link_to 'FIND CHARGER', root_path %>
         <br>
-        <%= link_to 'MY PROFILE', dashboard_path %>
+        <%= link_to 'MY PROFILE', edit_user_registration_path %>
         <br>
         <%= link_to 'MY CHARGER', dashboard_path %>
       </div>
