--- a/app/assets/stylesheets/components/_dashboard_tab.scss
+++ b/app/assets/stylesheets/components/_dashboard_tab.scss
@@ -42,6 +42,7 @@
 
 
 // THE TAB PAGES
+
 #tab-1-content, #tab-2-content, #tab-3-content {
   // display: none;
   opacity: 0;
@@ -54,15 +55,17 @@
   transition: 0.3s;
   margin: 30px;
   h2 {
-    font-size: 21px;
+    font-size: 20px;
+    text-align: center;
   }
   h3 {
-    font-size: 15px;
+    font-size: 20px;
+    text-align: center;
   }
   p {
     font-size: 12px;
-    margin-top: 6px;
-    margin-bottom: 0px;
+    line-height: 13px;
+    margin: 8px 0;
   }
   button {
     text-decoration: none;
@@ -99,6 +102,15 @@
       line-height: 0px;
     }
   }
+}
+
+// the slim line between the booking/rating infos
+.tab-content-separator {
+  height: 1px;
+  width: 65%;
+  margin: 15px auto;
+  margin-bottom: 25px;
+  background-color: rgb(199, 199, 199);
 }
 
 // to have some elements next to each other
