--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -91,12 +91,11 @@
 <div id="tab-1-content" class="select">
   <div class="tab-card">
     <h2>Latest booking</h2>
-    <ul>
+      <div class="tab-content-separator"></div>
       <p><%= @user.bookings.last.date_time.strftime('%A, %d %b') %></p>
       <p><%= @user.bookings.last.date_time.strftime('%l:%M %p') %> - <%=  (@user.bookings.last.date_time + @user.bookings.last.duration.minutes).strftime('%l:%M %p') %></p>
       <p><%= @user.bookings.last.plug.location%></p>
-    </ul>
-      <h3 class="tab-button">Write Review <i class="far fa-keyboard"></i></h3>
+      <p>Write Review + <i class="far fa-keyboard"></i></p>
   </div>
 </div>
 
@@ -107,26 +106,24 @@
   <div class="tab-card">
     <h3>Written Reviews <i class="fas fa-paper-plane"></i></h3>
       <% @user.reviews.each do |review| %>
-        <ul>
-          <p><%= review.contents %></p>
-          <p><%= review.booking.date_time.strftime('%A, %d %b') %></p>
-        </ul>
+        <div class="tab-content-separator"></div>
+        <p><%= review.contents %></p>
+        <p><%= review.booking.date_time.strftime('%A, %d %b') %></p>
       <% end %>
   </div>
   <div class="tab-card">
     <h3>Received Reviews <i class="fas fa-mail-bulk"></i></h3>
     <% @user.reviews_as_owner.each do |review| %>
-        <ul>
-          <% num = review.rating.to_i %>
-            <% num.times do %>
-              <i class="fas fa-star"></i>
-            <% end %>
-            <% (5-num).times do %>
-              <i class="far fa-star"></i>
-            <% end %>
-          <p><%= review.contents %></p>
-          <p><%= review.booking.date_time.strftime('%A, %d %b') %></p>
-        </ul>
+    <div class="tab-content-separator"></div>
+    <% num = review.rating.to_i %>
+      <% num.times do %>
+        <i class="fas fa-star small "></i>
+      <% end %>
+      <% (5-num).times do %>
+        <i class="far fa-star small "></i>
+      <% end %>
+      <p><%= review.contents %></p>
+      <p><%= review.booking.date_time.strftime('%A, %d %b') %></p>
     <% end %>
   </div>
 </div>
@@ -139,22 +136,20 @@
   <div class="tab-card">
     <h3>Booking History <i class="fas fa-book"></i></h3>
     <% @user.bookings.each do |booking| %>
-      <ul>
-        <p><%= booking.date_time.strftime('%A, %d %b') %></p>
-        <p><%= booking.date_time.strftime('%l:%M %p') %> - <%=  (booking.date_time + booking.duration.minutes).strftime('%l:%M %p') %></p>
-        <p><%= booking.plug.location%></p>
-      </ul>
+      <div class="tab-content-separator"></div>
+      <p><%= booking.date_time.strftime('%A, %d %b') %></p>
+      <p><%= booking.date_time.strftime('%l:%M %p') %> - <%=  (booking.date_time + booking.duration.minutes).strftime('%l:%M %p') %></p>
+      <p><%= booking.plug.location%></p>
     <% end %>
   </div>
   <div class="tab-card">
     <h3>Plug Booking History <i class="fas fa-charging-station"></i></h3>
     <% @user.plugs.each do |plug| %>
       <% plug.bookings.each do |booking| %>
-        <ul>
-          <p><%= booking.user.first_name %> <%= booking.user.last_name %></p>
-          <p><%= booking.date_time.strftime('%A, %d %b') %></p>
-          <p><%= booking.date_time.strftime('%l:%M %p') %> - <%=  (booking.date_time + booking.duration.minutes).strftime('%l:%M %p') %></p>
-        </ul>
+        <div class="tab-content-separator"></div>
+        <p><%= booking.user.first_name %> <%= booking.user.last_name %></p>
+        <p><%= booking.date_time.strftime('%A, %d %b') %></p>
+        <p><%= booking.date_time.strftime('%l:%M %p') %> - <%=  (booking.date_time + booking.duration.minutes).strftime('%l:%M %p') %></p>
       <% end %>
     <% end %>
   </div>
