--- a/app/assets/stylesheets/components/_dashboard_tab.scss
+++ b/app/assets/stylesheets/components/_dashboard_tab.scss
@@ -55,20 +55,27 @@
   transition: 0.3s;
   margin: 30px;
   h2 {
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
   }
   h3 {
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
   }
   p {
     font-size: 12px;
     line-height: 13px;
     margin: 8px 0;
+    text-align: center;
   }
   button {
     text-decoration: none;
+  }
+}
+
+@media (min-width: 1000px) {
+  #tab-1-content, #tab-2-content, #tab-3-content {
+    display: flex;
   }
 }
 
@@ -84,7 +91,7 @@
 // for the card design
 .tab-card {
   border-radius: 8px;
-  padding: 30px;
+  padding: 50px;
   margin-bottom: 30px;
   background-color: white;
   color: rgb(114, 114, 114);
@@ -108,8 +115,7 @@
 .tab-content-separator {
   height: 1px;
   width: 65%;
-  margin: 15px auto;
-  margin-bottom: 25px;
+  margin: 20px auto;
   background-color: rgb(199, 199, 199);
 }
 
