--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -1,6 +1,7 @@
 #profile_card {
   border-radius: 8px;
   padding: 10px;
+  padding-bottom: 0;
   padding-top: 50px;
   margin: 0px 30px 30px 30px;
   background-color: rgb(228, 228, 228);
