--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,5 +1,10 @@
-<div style="height: 100vh; width:100vw;" id="map"
-      data-controller="mapbox"
-      data-mapbox-markers-value="<%= @marker.to_json %>"
-      data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+<div class="d-flex">
+  <div style="height: 100vh; width:100vw;" id="map"
+        data-controller="mapbox"
+        data-mapbox-markers-value="<%= @marker.to_json %>"
+        data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
+  <div class="stop-button btn btn-danger">
+    <%= link_to "Stop Booking", bookings_stop_path(@plug, @booking) %>
+  </div>
 </div>
