--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -11,6 +11,7 @@
   color: white;
   background-color: $default-red;
   padding: 40px;
+  padding-top: 46px;
   transition: all 0.4s ease-in-out;
   white-space: nowrap;
   z-index: 2;
@@ -18,6 +19,7 @@
     font-family: 'Rajdhani', sans-serif;
     font-size: 40px;
     font-weight: 600;
+    line-height: 40px;
   }
   a {
     color: white;
