--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -9,6 +9,8 @@
         <%= link_to 'MY PROFILE', edit_user_registration_path %>
         <br>
         <%= link_to 'MY CHARGER', dashboard_path %>
+        <br>
+        <%= link_to 'SIGN OUT', destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" }, class: "submit-button" %>
       </div>
       <div class="content-separator"></div>
       <div class="footer-links">
