--- a/app/views/bookings/approve.html.erb
+++ b/app/views/bookings/approve.html.erb
@@ -1,3 +1,5 @@
+<div>
 <h1>Are you sure?</h1>
 <%= link_to "Book Now", plug_bookings_path(@plug), method: :post %>
 <%= link_to "Cancel", plugs_path %>
+</div>
