--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,1 +1,20 @@
-<h1>Hello there</h1>
+<div class="booking-container">
+  <div style="height: 70vh; width:100vw;" id="map"
+        data-controller="mapbox"
+        data-mapbox-markers-value="<%= @marker.to_json %>"
+        data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
+  <div class="booking-info" style="height: 30vh">
+    <div class="stop-button btn btn-danger">
+      <%= link_to "Stop Booking", bookings_stop_path(@plug, @booking), class:"stop-button-press" %>
+    </div>
+  </div>
+</div>
+
+<script>
+const stop_button_booking = document.querySelector('.stop-button-press')
+stop_button_booking.addEventListener("click", (event) => {
+  <% @booking.duration = 0 %>
+  <% @booking.save %>
+})
+</script>
