--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "booking_tab";
+@import "current_booking";
 @import "dashboard_tab";
 @import "home_tab";
 @import "input_field";
