finished styling for payment page

--- a/app/assets/stylesheets/components/_stop_button.scss
+++ b/app/assets/stylesheets/components/_stop_button.scss
@@ -19,5 +19,8 @@
   font-family: 'Rajdhani', sans-serif;
   font-size: 30px;
   font-weight: 600;
-
+  a {
+    color: white;
+    text-decoration: none;
+  }
 }
