--- a/app/assets/stylesheets/components/_book_now_button.scss
+++ b/app/assets/stylesheets/components/_book_now_button.scss
@@ -2,9 +2,16 @@
   text-align: center;
   background-color: $default-red;
   color: white;
-  border: 2px solid $default-red;
-  padding: 0.3rem 5.5rem;
+  width: 100%;
   border-radius: 25px;
   font-weight: bold;
   font-size: large;
+  text-decoration: none;
+  border: red;
+  padding-top: .2rem
+  ;
+  border-color: $default-red;
+  a {
+    color: white
+  }
 }
