--- a/app/views/plugs/_info_window.html.erb
+++ b/app/views/plugs/_info_window.html.erb
@@ -1,12 +1,12 @@
 <div class='info-window'>
   <div class="info-window-text">
     <p>PLUG TYPE: <%= plug.plug_type %></p>
-    <p>COST: <%= plug.fixed_cost_per_15_min %></p>
+    <p>COST: $<%= plug.fixed_cost_per_15_min %> per hour</p>
     <p>DESCRIPTION: <%= plug.description %></p>
   </div>
   <% if plug.availability == 0 %>
     <button class="info-window-button"><%= link_to "CHARGE NOW", bookings_approve_path(plug) %></button>
   <% else %>
-    <p>This Charger is currently unavailable</p>
+    <p>**This charger is currently unavailable**</p>
   <% end %>
 </div>
